--- a/src/pages/resume/resume.style.css
+++ b/src/pages/resume/resume.style.css
@@ -53,6 +53,7 @@ body { -webkit-print-color-adjust: exact; }
 
 .details-container {
     margin-top: 30px;
+    word-break: keep-all;
 }
 
 .details-list {
